--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "boxicons": "^2.1.4",
     "concurrently": "^9.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "eslint-plugin-react-hooks": "^5.2.0-canary-3b009b4c-20250102",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.10.7",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
