--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-cloud",
-  "homepage": "https://SPSingh-1/.github.io/updated-cloud",
+  "homepage": "https://spsingh-1.github.io/updated-cloud",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
